@startuml MazelatBlasaClassDiagram

' ===== STYLE =====
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor LightBlue
    BorderColor Black
    ArrowColor Black
}

' ===== CLASSES =====

class User {
    - id: Integer
    - email: String
    - hashed_password: String
    - full_name: String
    - phone: String
    - image_url: String
    - age: Integer
    --
    + login()
    + register()
    + updateProfile()
}

class Team {
    - id: Integer
    - name: String
    --
    + addMember()
    + removeMember()
}

class TeamMember {
    - id: Integer
    - name: String
    - user_id: Integer {nullable}
}

class Match {
    - id: Integer
    - title: String
    - description: String
    - type_match: String
    - city: String
    - stadium: String
    - date: String
    - start_time: String
    - end_time: String
    - nb_players: Integer
    - already_joined: Integer
    - price_per_player: Float
    - organizer_phone: String
    - min_age: Integer
    - max_age: Integer
    - is_team_match: Boolean
    --
    + create()
    + join()
    + cancel()
}

class Feedback {
    - id: Integer
    - name: String
    - email: String
    - message: String
    --
    + submit()
}

' ===== RELATIONSHIPS =====

' User organizes Match (1 to 0..*)
User "1" -- "0..*" Match : organizes >

' User participates in Match (Many-to-Many via match_participants)
User "0..*" -- "0..*" Match : participates >

' User is captain of Team (1 to 0..*)
User "1" -- "0..*" Team : captain of >

' Team has TeamMember (Composition forte: si Team supprimée, TeamMembers supprimés)
Team "1" *-- "0..*" TeamMember : has >

' TeamMember linked to User (Optional: 0..* to 0..1)
TeamMember "0..*" -- "0..1" User : linked >

' Match has Team A and Team B (Agrégation faible: Teams existent indépendamment du Match)
Match "0..*" o-- "0..1" Team : team_a, team_b >

' Feedback linked to User (Optional: 0..* to 0..1)
Feedback "0..*" -- "0..1" User : sends >

@enduml
